<resources>
    <string name="app_name">JobApplication</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="login">Iniciar Sesión</string>
    <string name="inicio">Inicio</string>
    <string name="log_out">Log out</string>
    <string name="job_application_informaci_n_personal">Job Application Información Personal</string>
    <string name="full_name">Full Name:</string>
    <string name="first_name">First Name</string>
    <string name="current_address">Current Address:</string>
    <string name="last_name">Last Name</string>
    <string name="street_address">Street Address</string>
    <string name="street_address_line_2">Street Address Line 2</string>
    <string name="city">City</string>
    <string name="postal_zip_code">Postal/Zip Code</string>
    <string name="state_provincie">State/Provincie</string>
    <string name="country">Country</string>
    <string name="email_address">Email Address:</string>
    <string name="example_mail_com">example@domain.com</string>
    <string name="phone_number">Phone Number:</string>
    <string name="area_code">Area Code</string>
    <string name="applying_for_position">Applying for position:</string>
    <string name="position">Position</string>
    <string name="start_date">Start Date:</string>
    <string name="date">Date</string>
    <string name="todo">TODO</string>
    <string name="title_activity_navdraw">Navdraw</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Job Application</string>
    <string name="nav_header_subtitle">A simple form</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Formulario</string>
    <string name="menu_slideshow">Editar Formulario</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="formulario">Formulario</string>
    <string name="configurar_formulario">Aplicaciones Existentes</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>

    <string name="credenciales_incorrectas">Credenciales Incorrectas</string>
    <string name="forgot_password">¿Olvidó su contraseña?</string>
    <string name="crear_usuario">¿No está registrado?\nCrear Usuario aquí</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="tipo_usuario">¿Usuario Administrador?</string>
    <string name="go_back">Ir Atrás</string>
    <string name="add_user">Añadir Usuario</string>
    <string name="new_pass">Nueva Contraseña</string>
    <string name="error_nombre_usuario">Nombre de Usuario ya en uso.</string>
    <string name="error_no_input">Ambos campos son requeridos</string>
    <string name="usuario_no_encontrado">Usuario no encontrado.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>