<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
                android:id="@+id/inicio"
                android:title="@string/inicio"
                android:icon="@drawable/huella"
        />
        <item
                android:id="@+id/form"
                android:title="@string/formulario"
                android:icon="@drawable/form_icon"
        />
        <item
                android:id="@+id/conForm"
                android:title="@string/configurar_formulario"
                android:icon="@drawable/look_applications"
        />
        <item
                android:id="@+id/logout"
                android:title="@string/cerrar_sesion"
                android:icon="@android:drawable/ic_lock_power_off"
        />
    </group>

</menu>