<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.fragments.JobFormFragment">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageView
                        android:layout_width="133dp"
                        android:layout_height="122dp" app:srcCompat="?android:attr/actionModeFindDrawable"
                        android:id="@+id/imageView3" android:layout_weight="1"
                        android:contentDescription="@string/todo"/>
                <TextView
                        android:text="@string/job_application_informaci_n_personal"
                        android:layout_width="161dp"
                        android:layout_height="match_parent" android:id="@+id/textView10" android:layout_weight="1"
                        android:textSize="24sp" android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold" android:textAlignment="center"/>
            </LinearLayout>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" android:layout_weight="1"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="52dp">
                <TextView
                        android:text="@string/full_name"
                        android:layout_width="353dp"
                        android:layout_height="match_parent" android:id="@+id/textView13" android:layout_weight="1"
                        android:textStyle="bold" android:textSize="18sp" android:textAlignment="center"/>
                <EditText
                        android:background="@drawable/design"
                        android:layout_width="153dp"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/firstName" android:hint="@string/first_name"
                        android:singleLine="false"
                        android:visibility="visible" android:textAlignment="center"/>
                <EditText
                        android:background="@drawable/design"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/lastName" android:layout_weight="1" android:hint="@string/last_name"
                        android:textAlignment="center"/>
            </LinearLayout>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="232dp">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="54dp">
                    <TextView
                            android:text="@string/current_address"
                            android:layout_width="200dp"
                            android:layout_height="match_parent" android:id="@+id/textView14"
                            android:layout_weight="1"
                            android:textSize="18sp" android:textStyle="bold" android:textAlignment="center"/>
                    <EditText
                            android:background="@drawable/design"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/streetAddress" android:layout_weight="1"
                            android:hint="@string/street_address"
                            android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="60dp">
                    <EditText
                            android:background="@drawable/design"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/streetAddressLineTwo" android:layout_weight="1"
                            android:hint="@string/street_address_line_2" android:textAlignment="center"
                            android:textSize="18sp"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="62dp">
                    <EditText
                            android:background="@drawable/design"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/city" android:layout_weight="1" android:hint="@string/city"
                            android:textAlignment="center" android:textSize="18sp"/>
                    <EditText
                            android:background="@drawable/design"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/state" android:layout_weight="1"
                            android:hint="@string/state_provincie"
                            android:textAlignment="center" android:textSize="18sp"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp" android:layout_weight="1">
                    <EditText
                            android:background="@drawable/design"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number"
                            android:ems="10"
                            android:id="@+id/postal" android:layout_weight="1"
                            android:hint="@string/postal_zip_code" android:textAlignment="center"/>
                    <EditText
                            android:background="@drawable/design"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/country" android:layout_weight="1"
                            android:hint="@string/country" android:textAlignment="center"/>
                </LinearLayout>
            </LinearLayout>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="49dp">
                <TextView
                        android:text="@string/email_address"
                        android:layout_width="210dp"
                        android:layout_height="match_parent" android:id="@+id/textView16" android:layout_weight="1"
                        android:textSize="18sp" android:textStyle="bold" android:textAlignment="center"/>
                <EditText
                        android:background="@drawable/design"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/email" android:layout_weight="1"
                        android:hint="@string/example_mail_com" android:selectAllOnFocus="false"
                        android:textAlignment="center"/>
            </LinearLayout>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                <TextView
                        android:text="@string/phone_number"
                        android:layout_width="364dp"
                        android:layout_height="match_parent" android:id="@+id/textView17" android:layout_weight="1"
                        android:textSize="18sp" android:textStyle="bold" android:textAlignment="center"/>
                <EditText
                        android:background="@drawable/design"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/areaCode" android:layout_weight="1"
                        android:hint="@string/area_code"
                        android:textAlignment="center"/>
                <EditText
                        android:background="@drawable/design"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/phoneNumber" android:layout_weight="1"
                        android:textAlignment="center" android:hint="@string/phone_number"/>
            </LinearLayout>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="64dp">
                <TextView
                        android:text="@string/applying_for_position"
                        android:layout_width="213dp"
                        android:layout_height="match_parent" android:id="@+id/textView19" android:layout_weight="1"
                        android:textSize="18sp" android:textStyle="bold" android:textAlignment="center"/>
                <EditText
                        android:background="@drawable/design"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/position" android:layout_weight="1" android:hint="@string/position"
                        android:textAlignment="center"/>
            </LinearLayout>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                <TextView
                        android:text="@string/start_date"
                        android:layout_width="209dp"
                        android:layout_height="match_parent" android:id="@+id/textView20" android:layout_weight="1"
                        android:textSize="18sp" android:textStyle="bold" android:textAlignment="center"/>
                <EditText
                        android:background="@drawable/design"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/date" android:layout_weight="1" android:hint="@string/date"
                        android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageButton
                        android:id="@+id/eliminar"

                        android:src="@android:drawable/ic_menu_delete"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="5dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/descartar"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                <ImageButton
                        android:src="@android:drawable/ic_menu_revert"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/descartar"
                        app:layout_constraintStart_toEndOf="@+id/eliminar"
                        app:layout_constraintEnd_toStartOf="@+id/guardar"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                <ImageButton
                        android:src="@android:drawable/ic_menu_save"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="15dp"
                        android:id="@+id/guardar"
                        app:layout_constraintStart_toEndOf="@+id/descartar"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>