<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/fondo_login"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.Login">

    <ImageView
            android:id="@+id/imageButton2"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:srcCompat="@drawable/log_start"
            android:background="@android:color/transparent"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/inicio"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.1"/>

    <EditText
            android:id="@+id/usuarioALoggear"
            android:textColorHint="@color/grisBonito"
            android:background="@drawable/design"
            android:layout_width="0dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/usuario"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"
            android:drawableStart="@drawable/icon_person"
            android:paddingStart="5dp"
            android:drawablePadding="-25dp"
            tools:ignore="RtlSymmetry"/>

    <EditText
            android:id="@+id/passALoggear"
            android:textColorHint="@color/grisBonito"
            android:background="@drawable/design"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:hint="@string/contrase_a"
            android:minHeight="48dp"
            android:textStyle="italic"
            android:textAlignment="center"
            android:paddingStart="5dp"
            android:drawableStart="@drawable/key_icon"
            android:drawablePadding="-25dp"
            tools:ignore="RtlSymmetry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usuarioALoggear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.05"/>

    <ImageButton
            android:id="@+id/loginButton"

            android:background="@android:color/transparent"
            android:backgroundTint="@color/white"

            android:textColor="@color/white"

            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            app:layout_constraintVertical_bias="0.1"

            android:src="@drawable/login"
            android:scaleType="fitCenter"
            android:contentDescription="@string/go_back"

            app:layout_constraintTop_toBottomOf="@+id/passALoggear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
           />

    <TextView
            android:id="@+id/errorLogin"
            android:text="@string/credenciales_incorrectas"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.04"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            android:textColor="#F44336"
            android:typeface="normal"
            android:textSize="16sp"
            android:visibility="gone"
            tools:visibility="visible"
    />

    <TextView
            android:id="@+id/crearUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_usuario"
            android:textStyle="bold|italic"
            android:textAlignment="center"
            android:textColorLink="@color/grisBonito"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cambiarContra"
            app:layout_constraintTop_toBottomOf="@+id/errorLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.05"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"/>

    <TextView
            android:id="@+id/cambiarContra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textStyle="bold|italic"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/crearUsuario"
            app:layout_constraintTop_toBottomOf="@+id/errorLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintVertical_bias="0.1"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
